--- a/Benchmark.Pager/Benchmark.Paging.PhysicalLevel.csproj
+++ b/Benchmark.Pager/Benchmark.Paging.PhysicalLevel.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{9AABDD8B-1446-4E9F-9D73-0194E0CB6353}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Benchmark.Pager</RootNamespace>
-    <AssemblyName>Benchmark.Pager</AssemblyName>
+    <RootNamespace>Benchmark.Paging.PhysicalLevel</RootNamespace>
+    <AssemblyName>Benchmark.Paging.PhysicalLevel</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -178,9 +178,9 @@
     <Analyzer Include="..\Test.Pager\packages\Microsoft.CodeAnalysis.Analyzers.1.1.0\analyzers\dotnet\cs\Microsoft.CodeAnalysis.CSharp.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Test.Pager\Pager\Pager.csproj">
+    <ProjectReference Include="..\Test.Pager\Pager\File.Paging.PhysicalLevel.csproj">
       <Project>{48462091-cdbc-4e4e-aee7-f63665e15a64}</Project>
-      <Name>Pager</Name>
+      <Name>File.Paging.PhysicalLevel</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
