--- a/Test.Paging.LogicalLevel/Test.Paging.LogicalLevel.csproj
+++ b/Test.Paging.LogicalLevel/Test.Paging.LogicalLevel.csproj
@@ -77,6 +77,7 @@
       <DependentUpon>SupportedTransactionLevels.feature</DependentUpon>
     </Compile>
     <Compile Include="Transactions\TransactionHeaderedPageTest.cs" />
+    <Compile Include="VirtualHeapPageTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FIle.Paging.LogicalLevel\FIle.Paging.LogicalLevel.csproj">
