First lock realisation

--- a/File.Paging.PhysicalLevel/File.Paging.PhysicalLevel.csproj
+++ b/File.Paging.PhysicalLevel/File.Paging.PhysicalLevel.csproj
@@ -66,29 +66,31 @@
   <ItemGroup>
     <Compile Include="Classes\BufferedPage.cs" />
     <Compile Include="Classes\ConcurrentSortedSet.cs" />
-    <Compile Include="Classes\Configurations\Builder\IFixedPageBuilder.cs" />
+    <Compile Include="Classes\Configurations\Builder\BuildingElements\IFixedPageBuilder.cs" />
     <Compile Include="Classes\Configurations\Builder\IFixedSizeRecordDefinition.cs" />
     <Compile Include="Classes\Configurations\Builder\IHeaderDefinition.cs" />
-    <Compile Include="Classes\Configurations\Builder\IHeaderedFixedPageBuilder.cs" />
-    <Compile Include="Classes\Configurations\Builder\IHeaderedVariablePageBuilder.cs" />
-    <Compile Include="Classes\Configurations\Builder\IHeaderedVariablePageWithOneRecordBuilder.cs" />
-    <Compile Include="Classes\Configurations\Builder\IPageDefinition.cs" />
-    <Compile Include="Classes\Configurations\Builder\IPageDefinitionBuilder.cs" />
-    <Compile Include="Classes\Configurations\Builder\IPageRecordTypeBuilder.cs" />
+    <Compile Include="Classes\Configurations\Builder\BuildingElements\IHeaderedFixedPageBuilder.cs" />
+    <Compile Include="Classes\Configurations\Builder\BuildingElements\IHeaderedVariablePageBuilder.cs" />
+    <Compile Include="Classes\Configurations\Builder\BuildingElements\IHeaderedVariablePageWithOneRecordBuilder.cs" />
+    <Compile Include="Classes\Configurations\Builder\BuildingElements\IPageDefinition.cs" />
+    <Compile Include="Classes\Configurations\Builder\BuildingElements\IPageDefinitionBuilder.cs" />
+    <Compile Include="Classes\Configurations\Builder\BuildingElements\IPageRecordTypeBuilder.cs" />
     <Compile Include="Classes\Configurations\Builder\IRecordDefinition.cs" />
-    <Compile Include="Classes\Configurations\Builder\IVariablePageBuilder.cs" />
-    <Compile Include="Classes\Configurations\Builder\IVariablePageWithOneRecordTypeBuilder.cs" />
+    <Compile Include="Classes\Configurations\Builder\BuildingElements\IVariablePageBuilder.cs" />
+    <Compile Include="Classes\Configurations\Builder\BuildingElements\IVariablePageWithOneRecordTypeBuilder.cs" />
     <Compile Include="Classes\Configurations\Builder\IVariableSizeRecordDefinition.cs" />
+    <Compile Include="Classes\Configurations\Builder\LockRuleset.cs" />
     <Compile Include="Classes\Configurations\Builder\PageDefinitionBuilder.cs" />
     <Compile Include="Classes\Configurations\ConsistencyAbilities.cs" />
     <Compile Include="Classes\Configurations\ConsistencyConfiguration.cs" />
     <Compile Include="Classes\Configurations\FixedSizeRecordDeclaration.cs" />
     <Compile Include="Classes\Configurations\PageHeadersConfiguration.cs" />
     <Compile Include="Classes\Configurations\VariableSizeRecordDeclaration.cs" />
+    <Compile Include="Classes\LockMatrix.cs" />
     <Compile Include="Classes\LockToken.cs" />
-    <Compile Include="Classes\PageLockToken.cs" />
     <Compile Include="Classes\PageReference.cs" />
     <Compile Include="Classes\Pages\ComplexRecordTypePage.cs" />
+    <Compile Include="Classes\Pages\Contracts\IPhysicalLockManager.cs" />
     <Compile Include="Classes\Pages\FixedRecordTypedPage.cs" />
     <Compile Include="Classes\Configurations\FixedRecordTypePageConfiguration.cs" />
     <Compile Include="Classes\Pages\HeaderedPage.cs" />
@@ -102,6 +104,7 @@
     <Compile Include="Classes\Pages\Contracts\IPhysicalLocks.cs" />
     <Compile Include="Classes\Pages\Contracts\IRowVersionControl.cs" />
     <Compile Include="Classes\Pages\TypedPageBase.cs" />
+    <Compile Include="Classes\Pages\TypedPageBaseG.cs" />
     <Compile Include="Contracts\Internal\IPageHeaders.cs" />
     <Compile Include="Contracts\IPagePhysicalManipulation.cs" />
     <Compile Include="Events\NewPageCreatedEvent.cs" />
@@ -116,6 +119,7 @@
     <Compile Include="Contracts\Internal\IExtentAccessorFactory.cs" />
     <Compile Include="Contracts\IPageManager.cs" />
     <Compile Include="Contracts\IPageManagerFactory.cs" />
+    <Compile Include="Implementations\LockManager.cs" />
     <Compile Include="Implementations\PageAccessor.cs" />
     <Compile Include="Implementations\ExtentAccessorFactory.cs" />
     <Compile Include="Implementations\PageHeadersBase.cs" />
