--- a/Benchmark.Paging.PhysicalLevel/Benchmark.Paging.PhysicalLevel.csproj
+++ b/Benchmark.Paging.PhysicalLevel/Benchmark.Paging.PhysicalLevel.csproj
@@ -156,6 +156,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="C.cs" />
+    <Compile Include="LockTest.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RecordChangeBenchmark.cs" />
