--- a/Benchmark.Paging.PhysicalLevel/Benchmark.Paging.PhysicalLevel.csproj
+++ b/Benchmark.Paging.PhysicalLevel/Benchmark.Paging.PhysicalLevel.csproj
@@ -161,6 +161,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RecordChangeBenchmark.cs" />
     <Compile Include="RecordAddBenchmark.cs" />
+    <Compile Include="SearchBench.cs" />
     <Compile Include="TestRecord.cs" />
     <Compile Include="TestRecord2.cs" />
     <Compile Include="WriteMethod.cs" />
