Reengineered fixed pages

--- a/File.Paging.PhysicalLevel/File.Paging.PhysicalLevel.csproj
+++ b/File.Paging.PhysicalLevel/File.Paging.PhysicalLevel.csproj
@@ -88,7 +88,7 @@
     <Compile Include="Classes\Configurations\VariableSizeRecordDeclaration.cs" />
     <Compile Include="Classes\LockMatrix.cs" />
     <Compile Include="Classes\LockToken.cs" />
-    <Compile Include="Classes\PageReference.cs" />
+    <Compile Include="Classes\References\PageReference.cs" />
     <Compile Include="Classes\Pages\ComplexRecordTypePage.cs" />
     <Compile Include="Classes\Pages\Contracts\IPhysicalLockManager.cs" />
     <Compile Include="Classes\Pages\FixedRecordTypedPage.cs" />
@@ -103,6 +103,12 @@
     <Compile Include="Classes\Pages\Contracts\IPhysicalLevelManipulation.cs" />
     <Compile Include="Classes\Pages\Contracts\IPhysicalLocks.cs" />
     <Compile Include="Classes\Pages\Contracts\IRowVersionControl.cs" />
+    <Compile Include="Classes\References\PhysicalPositionPersistentPageRecordReference.cs" />
+    <Compile Include="Classes\Pages\LockingHeaderPage.cs" />
+    <Compile Include="Classes\Pages\LockingPage.cs" />
+    <Compile Include="Classes\Pages\LockingPageBase.cs" />
+    <Compile Include="Classes\References\LogicalPositionPersistentPageRecordReference.cs" />
+    <Compile Include="Classes\References\RowKeyPersistentPageRecordReference.cs" />
     <Compile Include="Classes\Pages\TypedPageBase.cs" />
     <Compile Include="Classes\Pages\TypedPageBaseG.cs" />
     <Compile Include="Contracts\Internal\IPageHeaders.cs" />
@@ -112,23 +118,26 @@
     <Compile Include="Exceptions\FileSizeInsufficientException.cs" />
     <Compile Include="Exceptions\RecordWriteConflictException.cs" />
     <Compile Include="Extent.cs" />
-    <Compile Include="Implementations\FixedRecordPageHeaders.cs" />
+    <Compile Include="Implementations\Headers\FixedPageParametersCalculator.cs" />
     <Compile Include="Implementations\GAMAccessor.cs" />
     <Compile Include="Contracts\Internal\IGAMAccessor.cs" />
     <Compile Include="Contracts\Internal\IPageAccessor.cs" />
     <Compile Include="Contracts\Internal\IExtentAccessorFactory.cs" />
     <Compile Include="Contracts\IPageManager.cs" />
     <Compile Include="Contracts\IPageManagerFactory.cs" />
+    <Compile Include="Implementations\Headers\FixedRecordWithLogicalOrderHeader.cs" />
+    <Compile Include="Implementations\Headers\FixedRecordPhysicalOnlyHeader.cs" />
     <Compile Include="Implementations\LockManager.cs" />
     <Compile Include="Implementations\PageAccessor.cs" />
     <Compile Include="Implementations\ExtentAccessorFactory.cs" />
-    <Compile Include="Implementations\PageHeadersBase.cs" />
+    <Compile Include="Implementations\Headers\PageHeadersBase.cs" />
     <Compile Include="Implementations\PageManager.cs" />
     <Compile Include="Implementations\PageManagerFactory.cs" />
     <Compile Include="Classes\Configurations\PageManagerConfiguration.cs" />
-    <Compile Include="Classes\PageRecordReference.cs" />
+    <Compile Include="Classes\References\PageRecordReference.cs" />
     <Compile Include="Implementations\UnderyingFileOperator.cs" />
-    <Compile Include="Implementations\VariableRecordPageHeaders.cs" />
+    <Compile Include="Implementations\Headers\VariableRecordPageHeaders.cs" />
+    <Compile Include="Implementations\Headers\VariableRecordWithLogicalOrderHeaders.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Classes\TypedRecord.cs" />
     <Compile Include="Contracts\Internal\IUnderlyingFileOperator.cs" />
