Reengineered interfaces and made some fixed and optimizations

--- a/File.Paging.PhysicalLevel/File.Paging.PhysicalLevel.csproj
+++ b/File.Paging.PhysicalLevel/File.Paging.PhysicalLevel.csproj
@@ -84,10 +84,24 @@
     <Compile Include="Classes\Configurations\ConsistencyAbilities.cs" />
     <Compile Include="Classes\Configurations\ConsistencyConfiguration.cs" />
     <Compile Include="Classes\Configurations\FixedSizeRecordDeclaration.cs" />
+    <Compile Include="Classes\Configurations\HeaderInfo.cs" />
     <Compile Include="Classes\Configurations\PageHeadersConfiguration.cs" />
     <Compile Include="Classes\Configurations\VariableSizeRecordDeclaration.cs" />
     <Compile Include="Classes\LockMatrix.cs" />
     <Compile Include="Classes\LockToken.cs" />
+    <Compile Include="Classes\PageFactories\HeaderFactory.cs" />
+    <Compile Include="Classes\PageFactories\HeaderPageFactory.cs" />
+    <Compile Include="Classes\PageFactories\IHeaderFactory.cs" />
+    <Compile Include="Classes\PageFactories\IPageFactory.cs" />
+    <Compile Include="Classes\PageFactories\LockingPageFactory.cs" />
+    <Compile Include="Classes\PageFactories\LogicalLevelManipulationFactory.cs" />
+    <Compile Include="Classes\PageFactories\PageContentFactory.cs" />
+    <Compile Include="Classes\PageFactories\PageFactory.cs" />
+    <Compile Include="Classes\PageFactories\PageInfoFactory.cs" />
+    <Compile Include="Classes\Pages\Contracts\ILogicalRecordOrderManipulation.cs" />
+    <Compile Include="Classes\Pages\LogicalRecordManipulator.cs" />
+    <Compile Include="Classes\Pages\PageInfo.cs" />
+    <Compile Include="Classes\RecordUtils.cs" />
     <Compile Include="Classes\References\PageReference.cs" />
     <Compile Include="Classes\Pages\ComplexRecordTypePage.cs" />
     <Compile Include="Classes\Pages\Contracts\IPhysicalLockManager.cs" />
@@ -104,13 +118,10 @@
     <Compile Include="Classes\Pages\Contracts\IPhysicalLocks.cs" />
     <Compile Include="Classes\Pages\Contracts\IRowVersionControl.cs" />
     <Compile Include="Classes\References\PhysicalPositionPersistentPageRecordReference.cs" />
-    <Compile Include="Classes\Pages\LockingHeaderPage.cs" />
     <Compile Include="Classes\Pages\LockingPage.cs" />
-    <Compile Include="Classes\Pages\LockingPageBase.cs" />
     <Compile Include="Classes\References\LogicalPositionPersistentPageRecordReference.cs" />
     <Compile Include="Classes\References\RowKeyPersistentPageRecordReference.cs" />
     <Compile Include="Classes\Pages\TypedPageBase.cs" />
-    <Compile Include="Classes\Pages\TypedPageBaseG.cs" />
     <Compile Include="Contracts\Internal\IPageHeaders.cs" />
     <Compile Include="Contracts\IPagePhysicalManipulation.cs" />
     <Compile Include="Events\NewPageCreatedEvent.cs" />
