--- a/FIle.Paging.LogicalLevel/FIle.Paging.LogicalLevel.csproj
+++ b/FIle.Paging.LogicalLevel/FIle.Paging.LogicalLevel.csproj
@@ -32,6 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
     <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq" />
@@ -51,6 +52,8 @@
     <Compile Include="Classes\ContiniousHeapPage\HeapHeader.cs" />
     <Compile Include="Classes\ContiniousHeapPage\LinkedPageHeaderBase.cs" />
     <Compile Include="Classes\ContiniousHeapPage\VirtualContiniousPage.cs" />
+    <Compile Include="Classes\Factories\ILogicalPageFactory.cs" />
+    <Compile Include="Classes\Factories\LogicalPageFactory.cs" />
     <Compile Include="Classes\Transactions\NoTransactionConfiguration.cs" />
     <Compile Include="Classes\OrderedPage\OrderedLogicalPageConfiguration.cs" />
     <Compile Include="Classes\Transactions\TransactionConfigurationWithHeader.cs" />
