--- a/Test.Paging.Physical/packages.config
+++ b/Test.Paging.Physical/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="RhinoMocks" version="3.6.1" targetFramework="net46" />
+  <package id="FakeItEasy" version="4.7.1" targetFramework="net46" /> 
 </packages>
