--- a/Test.Paging.Physical/Test.Paging.PhysicalLevel.Core.csproj
+++ b/Test.Paging.Physical/Test.Paging.PhysicalLevel.Core.csproj
@@ -13,8 +13,13 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="FakeItEasy" Version="4.7.1" />
+    <PackageReference Include="FakeItEasy.Analyzer.CSharp" Version="4.7.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
     <PackageReference Include="Microsoft.TestPlatform" Version="15.8.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.3.2" />
