--- a/TimeArchiver/TimeArchiver.csproj
+++ b/TimeArchiver/TimeArchiver.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\File.Paging.PhysicalLevel\File.Paging.PhysicalLevel.Core.csproj" />
+  </ItemGroup>
+
 </Project>
