Created IndexInteractor tests and created DataPageInteractor

--- a/Test.TimeArchiver/Test.TimeArchiver.csproj
+++ b/Test.TimeArchiver/Test.TimeArchiver.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\File.Paging.PhysicalLevel.MemoryStubs\File.Paging.PhysicalLevel.MemoryStubs.Core.csproj" />
     <ProjectReference Include="..\TimeArchiver\TimeArchiver.csproj" />
   </ItemGroup>
 
