Finished benchmarks and fixed some errors. Initial version of archiver seems working now.

--- a/FIle.Paging.LogicalLevel/File.Paging.LogicalLevel.Core.csproj
+++ b/FIle.Paging.LogicalLevel/File.Paging.LogicalLevel.Core.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>File.Paging.LogicalLevel</AssemblyName>
     <RootNamespace>File.Paging.LogicalLevel</RootNamespace>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
