--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,5 +19,7 @@ stages:
 packages:
   stage: deploy
   script: 
-   - dotnet build System.IO.Paging.PhysicalLevel.Core -c Release 
-   - dotnet nuget push System.IO.Paging.PhysicalLevel.Core/bin/Release/*.nupkg -k oy2cqotpghuxh56wruoabzcnpnh7z3auxcbbc5y26tngtu
+   - dotnet build System.IO.Paging.PhysicalLevel -c Release 
+   - dotnet nuget push System.IO.Paging.PhysicalLevel/bin/Release/*.nupkg -k oy2cqotpghuxh56wruoabzcnpnh7z3auxcbbc5y26tngtu
+   - dotnet build System.IO.Paging.LogicalLevel -c Release 
+   - dotnet nuget push System.IO.Paging.LogicalLevel/bin/Release/*.nupkg -k oy2cqotpghuxh56wruoabzcnpnh7z3auxcbbc5y26tngtu
