--- a/System.IO.Paging.PhysicalLevel/System.IO.Paging.PhysicalLevel.Core.csproj
+++ b/System.IO.Paging.PhysicalLevel/System.IO.Paging.PhysicalLevel.Core.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>System.IO.Paging.PhysicalLevel</AssemblyName>
     <RootNamespace>System.IO.Paging.PhysicalLevel</RootNamespace>
-    <Version>0.0.1</Version>
+    <Version>0.0.1-beta</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageId>System.IO.Paging.PhysicalLevel</PackageId>
     <Authors>System.IO.Paging.PhysicalLevel</Authors>
