--- a/System.IO.Paging.LogicalLevel/System.IO.Paging.LogicalLevel.Core.csproj
+++ b/System.IO.Paging.LogicalLevel/System.IO.Paging.LogicalLevel.Core.csproj
@@ -6,14 +6,14 @@
     <RootNamespace>System.IO.Paging.LogicalLevel</RootNamespace>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Version>0.0.1-beta</Version>
-    <PackageId>System.IO.Paging.LogicalLevel</PackageId>
-    <Authors>System.IO.Paging.LogicalLevel</Authors>
-    <Company>System.IO.Paging.LogicalLevel</Company>
+    <PackageId>Addiction.System.IO.Paging.LogicalLevel</PackageId>
+    <Authors>Kayan</Authors>
+    <Company>-</Company>
     <Product>System.IO.Paging.LogicalLevel</Product>
-    <RepositoryUrl>https://github.com/kayanme/Pager</RepositoryUrl>
+    <RepositoryUrl>https://github.com/kayanme/System.IO.Paging</RepositoryUrl>
     <Description>Memory-mapped file paging subsystem. Logical pages upon physical.</Description>
     <RepositoryType>git</RepositoryType>
-    <PackageReleaseNotes>first beta</PackageReleaseNotes>
+    <PackageReleaseNotes>First beta. Not for public usage.</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
