--- a/System.IO.Paging.LogicalLevel/System.IO.Paging.LogicalLevel.Core.csproj
+++ b/System.IO.Paging.LogicalLevel/System.IO.Paging.LogicalLevel.Core.csproj
@@ -5,7 +5,7 @@
     <AssemblyName>System.IO.Paging.LogicalLevel</AssemblyName>
     <RootNamespace>System.IO.Paging.LogicalLevel</RootNamespace>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>0.0.1-beta</Version>
+    <Version>0.0.2-beta</Version>
     <PackageId>Addiction.System.IO.Paging.LogicalLevel</PackageId>
     <Authors>Kayan</Authors>
     <Company>-</Company>
@@ -14,6 +14,7 @@
     <Description>Memory-mapped file paging subsystem. Logical pages upon physical.</Description>
     <RepositoryType>git</RepositoryType>
     <PackageReleaseNotes>First beta. Not for public usage.</PackageReleaseNotes>
+    <PackageProjectUrl>https://gitlab.com/kayanme/System.IO.Paging</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
