--- a/System.IO.Paging.PhysicalLevel/System.IO.Paging.PhysicalLevel.Core.csproj
+++ b/System.IO.Paging.PhysicalLevel/System.IO.Paging.PhysicalLevel.Core.csproj
@@ -4,16 +4,17 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>System.IO.Paging.PhysicalLevel</AssemblyName>
     <RootNamespace>System.IO.Paging.PhysicalLevel</RootNamespace>
-    <Version>0.0.1-beta</Version>
+    <Version>0.0.2-beta</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageId>Addiction.System.IO.Paging.PhysicalLevel</PackageId>
     <Authors>Kayan</Authors>
     <Company>-</Company>
     <Product>System.IO.Paging.PhysicalLevel</Product>
     <Description>Memory-mapped file paging subsystem. Physical pages.</Description>
-    <PackageProjectUrl>https://github.com/kayanme/Pager</PackageProjectUrl>
-    <RepositoryType>https://github.com/kayanme/System.IO.Paging</RepositoryType>
+    <PackageProjectUrl>https://github.com/kayanme/System.IO.Paging</PackageProjectUrl>
+    <RepositoryType>git</RepositoryType>
     <PackageReleaseNotes>First beta. Not for public usage.</PackageReleaseNotes>
+    <RepositoryUrl>https://github.com/kayanme/System.IO.Paging</RepositoryUrl>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
