--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,13 +8,13 @@ stages:
 #  stage: build
 #  script: dotnet build Test.Pager.Core.sln
 
-test_run_debug: 
-  stage: test
-  script: dotnet test Test.Paging.Physical/Test.Paging.PhysicalLevel.Core.csproj -c Debug
+#test_run_debug: 
+#  stage: test
+#  script: dotnet test Test.Paging.Physical/Test.Paging.PhysicalLevel.Core.csproj -c Debug
 
-test_run: 
-  stage: test
-  script: dotnet test Test.Paging.Physical/Test.Paging.PhysicalLevel.Core.csproj -c Release
+#test_run: 
+#  stage: test
+#  script: dotnet test Test.Paging.Physical/Test.Paging.PhysicalLevel.Core.csproj -c Release
 
 packages:
   stage: deploy
@@ -23,5 +23,5 @@ packages:
    - dotnet nuget push System.IO.Paging.PhysicalLevel/bin/Release/*.nupkg -k oy2cqotpghuxh56wruoabzcnpnh7z3auxcbbc5y26tngtu -s https://api.nuget.org/v3/index.json
    - dotnet build System.IO.Paging.LogicalLevel/System.IO.Paging.LogicalLevel.Core.csproj -c Release 
    - dotnet nuget push System.IO.Paging.LogicalLevel/bin/Release/*.nupkg -k oy2cqotpghuxh56wruoabzcnpnh7z3auxcbbc5y26tngtu -s https://api.nuget.org/v3/index.json
-   - dotnet build System.IO.Paging.LogicalLevel/System.IO.Paging.PhysicalLevel.MemoryStubs.Core.csproj -c Release 
+   - dotnet build System.IO.Paging.PhysicalLevel.MemoryStubs/System.IO.Paging.PhysicalLevel.MemoryStubs.Core.csproj -c Release 
    - dotnet nuget push System.IO.Paging.PhysicalLevel.MemoryStubs/bin/Release/*.nupkg -k oy2cqotpghuxh56wruoabzcnpnh7z3auxcbbc5y26tngtu -s https://api.nuget.org/v3/index.json
