--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,17 +4,21 @@ stages:
  - test 
  - deploy
 
-#build_all:  
-#  stage: build
-#  script: dotnet build Test.Pager.Core.sln
+build_all:  
+  stage: build
+  script: dotnet build Test.Pager.Core.sln
 
-#test_run_debug: 
-#  stage: test
-#  script: dotnet test Test.Paging.Physical/Test.Paging.PhysicalLevel.Core.csproj -c Debug
+test_run_debug: 
+  stage: test
+  script: 
+    - dotnet test Test.Paging.Physical/Test.Paging.PhysicalLevel.Core.csproj -c Debug
+    - dotnet test Test.Paging.LogicalLevel/Test.Paging.LogicalLevel.Core.csproj -c Debug
 
-#test_run: 
-#  stage: test
-#  script: dotnet test Test.Paging.Physical/Test.Paging.PhysicalLevel.Core.csproj -c Release
+test_run: 
+  stage: test
+  script: 
+   - dotnet test Test.Paging.Physical/Test.Paging.PhysicalLevel.Core.csproj -c Release
+   - dotnet test Test.Paging.LogicalLevel/Test.Paging.LogicalLevel.Core.csproj -c Release
 
 packages:
   stage: deploy
