--- a/Test.Paging.LogicalLevel/Test.Paging.LogicalLevel.Core.csproj
+++ b/Test.Paging.LogicalLevel/Test.Paging.LogicalLevel.Core.csproj
@@ -7,16 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FakeItEasy" Version="4.8.0" />
+    <PackageReference Include="FakeItEasy.Analyzer.CSharp" Version="4.8.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
+    <PackageReference Include="Microsoft.TestPlatform" Version="15.8.0" />
+    <PackageReference Include="MSTest.TestAdapter" Version="1.3.2" />
     <PackageReference Include="MSTest.TestFramework" Version="1.3.2" />
-    <PackageReference Include="RhinoMocks" Version="3.6.1" />
-    <PackageReference Include="SpecFlow" Version="2.3.2" />
-    <PackageReference Include="SpecFlow.MsTest" Version="2.3.2" />
     <PackageReference Include="System.IO.MemoryMappedFiles" Version="4.3.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\FIle.Paging.LogicalLevel\File.Paging.LogicalLevel.Core.csproj" />
-    <ProjectReference Include="..\File.Paging.PhysicalLevel\File.Paging.PhysicalLevel.Core.csproj" />
+    <ProjectReference Include="..\System.IO.Paging.LogicalLevel\System.IO.Paging.LogicalLevel.Core.csproj" />
+    <ProjectReference Include="..\System.IO.Paging.PhysicalLevel\System.IO.Paging.PhysicalLevel.Core.csproj" />
   </ItemGroup>
 
   <ItemGroup>
